--- a/widgets/widget/ui/universe_widget.ui
+++ b/widgets/widget/ui/universe_widget.ui
@@ -83,6 +83,13 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="PushButton" name="stopButton">
+        <property name="text">
+         <string>停止</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
