--- a/gui/widgets/avatar/ui/one_avatar.ui
+++ b/gui/widgets/avatar/ui/one_avatar.ui
@@ -30,10 +30,35 @@
     <number>5</number>
    </property>
    <item>
-    <widget class="AvatarWidget" name="avatar"/>
+    <widget class="AvatarWidget" name="avatar">
+     <property name="minimumSize">
+      <size>
+       <width>96</width>
+       <height>96</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>96</width>
+       <height>96</height>
+      </size>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="StrongBodyLabel" name="name">
+     <property name="minimumSize">
+      <size>
+       <width>96</width>
+       <height>19</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>96</width>
+       <height>19</height>
+      </size>
+     </property>
      <property name="text">
       <string>name</string>
      </property>
